--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,22 @@
-plugins {
-    id 'java'
+buildscript{
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "io.franzbecker:gradle-lombok:3.1.0"
+    }
+
 }
 
-group 'api'
-version '1.0-SNAPSHOT'
+subprojects {
 
-sourceCompatibility = 1.8
+    apply plugin: 'java'
+    apply plugin: 'io.franzbecker.gradle-lombok'
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        jcenter()
+    }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
