--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,6 +18,11 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     compile group: 'com.github.javafaker', name: 'javafaker', version: '0.18'
 
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
+    
     testCompile "org.testng:testng:$testNgVersion"
 }
 
@@ -27,4 +32,15 @@ test {
     maxParallelForks = 5
     failFast = false
     forkEvery = 3
+    
+    testLogging{
+        events "PASSED", "FAILED", "SKIPPED"
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
+    
+    test.outputs.upToDateWhen{
+        false
+    }
+    
 }
