--- a/api/build.gradle
+++ b/api/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
+    compile 'org.mongodb:mongodb-driver-sync:4.0.0'
     
     testCompile "org.testng:testng:$testNgVersion"
 }
