--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,18 @@ build/
 out/
 *.ipr
 *.iml
+*.war
+*.nar
+*.ear
+*.tar.gz
+*.rar
+*.ctxt
 *.DS_Store
+.DS_Store
+api/src/logs
+lib/
+api/build
+api/build/*
+api/build/
+api/.DS_Store
+gradle/.DS_Store
