--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.DS_Store
+applet
+application.macosx
+out
+
 .gradle/
 .idea/
 build/
@@ -10,12 +38,5 @@ out/
 *.tar.gz
 *.rar
 *.ctxt
-*.DS_Store
-.DS_Store
 api/src/logs
 lib/
-api/build
-api/build/*
-api/build/
-api/.DS_Store
-gradle/.DS_Store
