--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Compiled class file
 *.class
 
 # Log file
@@ -18,7 +19,7 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs
 hs_err_pid*
 
 .DS_Store
@@ -32,10 +33,5 @@ build/
 out/
 *.ipr
 *.iml
-*.war
-*.nar
-*.ear
-*.tar.gz
-*.rar
 *.ctxt
 api/src/logs
