--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# *.jar
+# *.war
+# *.nar
+# *.ear
+# *.zip
+# *.tar.gz
+# *.rar
 
 # virtual machine crash logs
 hs_err_pid*
