create offer via goapi

--- a/api/src/main/resources/config.properties
+++ b/api/src/main/resources/config.properties
@@ -6,3 +6,5 @@ mongodbCentralUsers = mongodb://localhost:27017
 mysqlUrl = jdbc:mysql://127.0.0.1:3306/webmaster
 mysqlPassword = toor
 mysqlUser = root
+clientId = 3
+token = ZvZITewhZoKnDDCSlb9ZXvI53fakLr_vEs8IL4w4Ffs.8-FBHIBEGc6LVo9h8PJvmUEcuIgw3ZB6skDxqaH80wM
