--- a/api/build.gradle
+++ b/api/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile 'org.mongodb:mongodb-driver-sync:4.0.0'
     compile 'org.assertj:assertj-core:3.11.1'
     compile 'mysql:mysql-connector-java:8.0.19'
