--- a/api/build.gradle
+++ b/api/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile "io.rest-assured:rest-assured:$restsAssuredVersion"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     compile group: 'com.github.javafaker', name: 'javafaker', version: '0.18'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.0'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
