--- a/api/build.gradle
+++ b/api/build.gradle
@@ -25,6 +25,11 @@ dependencies {
     compile group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
+    compile group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.13'
+//    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.0'
+//    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
     compile 'org.mongodb:mongodb-driver-sync:4.0.0'
     compile 'org.assertj:assertj-core:3.11.1'
     compile 'mysql:mysql-connector-java:8.0.19'
