--- a/api/build.gradle
+++ b/api/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
-    compile group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.13'
+//    compile group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.13'
 //    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.0'
 //    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
