--- a/api/build.gradle
+++ b/api/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    compile group: 'org.mongojack', name: 'mongojack', version: '4.0.1'
 
 //    compile group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.13'
 //    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.0'
