setup config for staging

--- a/api/src/main/resources/config.properties
+++ b/api/src/main/resources/config.properties
@@ -1,10 +1,15 @@
-baseUrl = http://api.dev.affise.com
+baseUrl = https://api-staging.affise.com
 localization = en
 logging = true
-mongodb = mongodb://localhost:27018
+mongodb = mongodb://10.201.0.80:1024/admin
 mongodbCentral = mongodb://localhost:27017
-mysqlUrl = jdbc:mysql://127.0.0.1:3306/webmaster
+mongodbCentralAdvertisers = mongodb://clobucks:mhPS4Q3rGbqSxVA@10.201.0.80:27018/advertisers?replSetName=advertisers-mongodb-staging
+mongodbCentralUsers = mongodb://clobucks:mhPS4Q3rGbqSxVA@10.201.0.80:27022/users?replSetName=users-mongodb-staging
+mongodbCentralAffiliates = mongodb://clobucks:mhPS4Q3rGbqSxVA@10.201.0.80:27019/affiliates?replSetName=affiliates-mongodb-staging
+mongodbCentralOffers = mongodb://clobucks:mhPS4Q3rGbqSxVA@10.201.0.80:27024/offers?replSetName=offers-mongodb-staging
+mongodbCentralSmartlinks = mongodb://clobucks:mhPS4Q3rGbqSxVA@10.201.0.80:27020/smartlinks?replSetName=smartlinks-mongodb-staging
+mysqlUrl = jdbc:mysql://10.201.0.80:1139/webmaster
 mysqlPassword = toor
 mysqlUser = root
-clientId = 99999
+clientId = 3
 token = c7lHq6LoZ6U_2GqaBmo2NZwdk0qcUJ2-EP4hBuNe11I.TS5n6XvPt8lfLCtHyEc4uMZ_UlE7C3zWa8OEsdjIfPo
