--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript{
     }
     dependencies {
         classpath "io.franzbecker:gradle-lombok:3.1.0"
+        classpath "io.qameta.allure:allure-gradle:2.8.1"
     }
 
 }
@@ -14,6 +15,7 @@ subprojects {
 
     apply plugin: 'java'
     apply plugin: 'io.franzbecker.gradle-lombok'
+    apply plugin: 'io.qameta.allure'
 
     repositories {
         jcenter()
