--- a/api/build.gradle
+++ b/api/build.gradle
@@ -25,7 +25,10 @@ dependencies {
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.5'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile group: 'org.mongojack', name: 'mongojack', version: '4.0.1'
-    
+    implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+    testImplementation 'org.awaitility:awaitility:4.0.3'
+
+
     compile group: 'io.qameta.allure', name: 'allure-rest-assured', version: '2.13.5'
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
